# LittleRobot

./: README.md
ServoController_Windows_3.7.3/ServoController_Windows_3.7.3/: Release_notes.txt
ServoController_Windows_3.7.3/ServoController_Windows_3.7.3/Software/Android/: ServoController.apk
ServoController_Windows_3.7.3/ServoController_Windows_3.7.3/Software/Windows/: Readme.txt
ServoController_Windows_3.7.3/ServoController_Windows_3.7.3/Software/Windows/ServoController/: config.ini
ServoController_Windows_3.7.3/ServoController_Windows_3.7.3/Source code/89c51/STC12C5A60S2/: Test.c
ServoController_Windows_3.7.3/ServoController_Windows_3.7.3/Source code/Arduino/Arduino_Serial_Servo/: Arduino_Serial_Servo.ino
ServoController_Windows_3.7.3/ServoController_Windows_3.7.3/Source code/Arduino/Arduino_Software_Serial/: Arduino_Software_Serial.ino
ServoController_Windows_3.7.3/ServoController_Windows_3.7.3/Source code/Linux_Source/: ReadMe
ServoController_Windows_3.7.3/ServoController_Windows_3.7.3/Source code/Linux_Source/C_test/: C_test.c
ServoController_Windows_3.7.3/ServoController_Windows_3.7.3/Source code/Linux_Source/Python_test/: Python_test.py
ServoController_Windows_3.7.3/ServoController_Windows_3.7.3/Source code/Raspberry Pi/: ReadMe  test.c
ServoController_Windows_3.7.3/ServoController_Windows_3.7.3/Source code/Raspberrypi Pico/: CMakeLists.txt  main.c
ServoController_Windows_3.7.3/ServoController_Windows_3.7.3/Source code/esp32/: Readme
ServoController_Windows_3.7.3/ServoController_Windows_3.7.3/Source code/esp8266/: Readme
(+23 files in other folders)
